Changed file names
index.html --> home.html
links.html --> index.html

All so that I don't have to download instagram and change my website link.

--- a/DivingBoard.html
+++ b/DivingBoard.html
@@ -11,7 +11,7 @@
 	<link rel="stylesheet" href="style.css">
 	<base target="_parent">
 	
-	<p><a href="index.html">My main page</a></p>
+	<p><a href="home.html">My main page</a></p>
 	<p><mark>The code for this project will be available shortly- I need to scrape it all together properly first.</mark></p>
 	
 	<h1 style="text-align:center;">DivingBoard</h1>
@@ -86,7 +86,7 @@ It does sound a bit like I've glossed over some stuff there, but the instruction
    2. UX needs some minor improvements (mostly idiot-proofing (not a dig at users; <i>I'm</i> the idiot)), a planned software editor for making more detailed configurations is planned but not written, and the device is occasionally a bit erratic; freezing or failing to boot properly are both rare but recurring problems.<a href="#footnote-2-ref">&#8617;</a> 
 </p>
 <hr>
-Last updated 2024-01-17
+Last updated 2024-01-29
 </body>
 </html>
 
