--- a/Making/SolarTrader/SolarTrader.html
+++ b/Making/SolarTrader/SolarTrader.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../../home.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
@@ -138,7 +138,7 @@ Your browser does not support the video tag.
 <p style="text-align:center;">The TableTop Simulator version can be accessed on the Steam Workshop <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=2908377316">here</a>, and the print-ready files if you want to make a physical copy are <a href="https://drive.google.com/drive/folders/1l0WsxB2lqhLrQAr2mJNWshHSWABBa9bN?usp=share_link">here</a>. I had some doubts about the ethics of putting this here until I realised that with the original company long gone and the game out of print, there's not only no-one losing money on this currently, but also so little demand for the game that it's kind of a moot point.</p>
 
 <hr>
-Last updated 2023-01-06
+Last updated 2024-01-29
 </body>
 </html>
 
