--- a/Making/timelapseCam/timelapseCam.html
+++ b/Making/timelapseCam/timelapseCam.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../../home.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
@@ -62,7 +62,7 @@ time.sleep(x) is very likely to go over the time x, especially when the programm
 <p style="text-align:center;">The latest version can be downloaded <a href="timelapseCam.py.zip" download>here</a>.</p>
 
 <hr>
-Last updated 2023-07-10
+Last updated 2024-01-29
 </body>
 </html>
 
