--- a/Making/wordleSolver/wordleSolver.html
+++ b/Making/wordleSolver/wordleSolver.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../../home.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
@@ -79,7 +79,7 @@ Your browser does not support the video tag.
 <p style="text-align:center;">The latest version can be downloaded <a href="SimpleWordleSolver.zip" download>here</a>.</p>
 
 <hr>
-Last updated 2023-06-01
+Last updated 2024-01-29
 </body>
 </html>
 
