--- a/Music/FreightTrain/FreightTrain.html
+++ b/Music/FreightTrain/FreightTrain.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../../home.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
@@ -79,7 +79,7 @@ The end of the song shows me singing the actual take in the little booth/mini-st
 <p style="text-align:center;">Available on <a href="https://open.spotify.com/album/1m5BC1gpOAEUK3Oa2HQRLT?si=MOyU8IHHR8qMEYT9djAW_Q" target="_blank">Spotify</a>, <a href="https://youtu.be/6V9mgLEXJZ4" target="_blank">YouTube</a>, and <a href="https://oliverhagen.bandcamp.com/track/freight-train" target="_blank">Bandcamp</a>.</p>
 
 <hr>
-Last updated 2023-07-10
+Last updated 2024-01-29
 </body>
 </html>
 
