--- a/Music/MelancholyChristmas/MelancholyChristmas.html
+++ b/Music/MelancholyChristmas/MelancholyChristmas.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../../home.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
@@ -113,7 +113,7 @@ Your browser does not support the video tag.
 Here's their <a href="https://linktr.ee/MutualFrogs">linktree</a></p>
 
 <hr>
-Last updated 2023-02-04
+Last updated 2024-01-29
 </body>
 </html>
 
