--- a/Music/PlasticBeach/PlasticBeach.html
+++ b/Music/PlasticBeach/PlasticBeach.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../../home.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
@@ -103,7 +103,7 @@ Your browser does not support the video tag.
 <p style="text-align:center;">Plastic Beach - Kazoo Edition is available on YouTube and SoundCloud. It may end up on streaming services at some point, but I need to find out how uploading weird covers works first.</p>
 
 <hr>
-Last updated 2023-01-06
+Last updated 2024-01-29
 </body>
 </html>
 
