--- a/Music/RPM2023/RPM2023.html
+++ b/Music/RPM2023/RPM2023.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../../home.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
@@ -111,7 +111,7 @@ Between this EP and the last album, I feel like I'm starting to build up a colle
 
 
 <hr>
-Last updated 2023-06-01
+Last updated 2024-01-29
 </body>
 </html>
 
