--- a/Music/home.html
+++ b/Music/home.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../home.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
@@ -56,7 +56,7 @@
  </div>
 
 <hr>
-Last updated 2023-07-10
+Last updated 2024-01-29
 </body>
 </html>
 
