--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en-GB">
 <head>
-<title>Oliver Hagen</title>
+<title>Oliver Hagen's Links</title>
 </head>
 <body>
 	
@@ -10,148 +10,95 @@
 	<link rel="stylesheet" href="style.css">
 	<base target="_parent">
 	
-	<p><a href="DivingBoard.html">DivingBoard</a></p>
+	<h1 style="text-align:center;"><a href="home.html">Oliver Hagen</a></h1>
 	
-	<h1 style="text-align:center;"><a href="links.html">Oliver Hagen</a></h1>
+	<img src="OliverHagen.png" alt="Oliver Hagen" style="width:150px;height:150px;"></img>
 	
+	<h2 style="text-align:center;">DIY Linktree</h2>
+	
+<h4 style="background-color:tomato; margin:30px; border:5px; text-align:center; color:white;">For musical bookings, see the 'Socials' section below.</h4>
+	
+	<hr>
+	<h3 style="text-align:center;">Moonage</h3>
+	<h4 style="text-align:center;">David Bowie Tribute band I'm currently playing keyboards with</h4>
+	
+	<img src="moonage.jpg" alt="Moonage picture" style="width:200px;height:200px;"></img>
+	
+	<p style="text-align:center;">Check link for gig dates</p>
 	
 	<div class="flex-container">
 		
+		<div><th><form action="https://www.moonagebowietribute.co.uk" target="_blank">
+             <button class="button button" type="submit">Website</button>
+          </form></th></div>
+		
+	</div>
+	
+	
+	<hr>
+	<h3 style="text-align:center;">Latest Music:</h3>
+	<h4 style="text-align:center;">Perfection Can't Be Rushed (but this sure can) - Original EP</h4>
+	
+	<img src="Music/RPM2023/RPM2023.png" alt="Perfection Can't Be Rushed album art" style="width:200px;height:200px;"></img>
+	
+	<div class="flex-container">
+		
+		<div><th><form action="https://oliverhagen.bandcamp.com/album/perfection-cant-be-rushed-but-this-sure-can" target="_blank">
+             <button class="button button" type="submit">Bandcamp</button>
+          </form></th></div>
+		
+		
+  	  <div><th><form action="https://open.spotify.com/album/44PziKBIPbgX5UhaDeC10O?si=PjiX8gyPRvmiPCv1yWB4pw" target="_blank">
+           <button class="button button" type="submit">Spotify</button>
+        </form></th></div>
+		
+		
+    	  <div><th><a href="https://youtube.com/playlist\?list=PL776zvniD1BgejY1hwlu_AQt2f5ICpiuN" target="_blank"><button class="button button">YouTube</button></a></th></div>
+		
+	</div>
+	
+	<hr>
+	<h3 style="text-align:center;">Socials</h3>
+	
+	<div class="flex-container">
+		
+  	  <div><th><form action="https://www.instagram.com/penguinatron/" target="_blank">
+           <button class="button button" title="Rarely used, not fully understood" type="submit">Instagram</button>
+        </form></th></div>
+		
+		<div><th><button class="button button" title="Rarely used, not fully understood" type="button">Discord - oliver.hagen</button></th></div>
+		
+  	  <div><th><form action="mailto:ophagen@icloud.com;" target="_blank">
+           <button class="button button" title="Old faithful" type="submit">Send Email</button>
+        </form></th></div>
+		
+	</div>
+	
+	<hr>
+	<h3 style="text-align:center;">Catalogue</h3>
+	
+	<div class="flex-container">
+		
+  	  <div><th><form action="https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA" target="_blank">
+           <button class="button button" title="Where my original music lives" type="submit">Spotify</button>
+        </form></th></div>
+		
+	  <div><th><form action="https://oliverhagen.bandcamp.com/" target="_blank">
+         <button class="button button" title="Where my original music lives" type="submit">Bandcamp</button>
+      </form></th></div>
+	  
 	  <div><th><form action="https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber" target="_blank">
          <button class="button button" title="I'm mainly here" type="submit">YouTube</button>
-      </form></th></div>
-	  
-	  <div><th><form action="https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA" target="_blank">
-         <button class="button button" title="Where my original music lives" type="submit">Spotify</button>
-      </form></th></div>
-	  
-	  <div><th><form action="https://oliverhagen.bandcamp.com/releases;" target="_blank">
-         <button class="button button" title="Where my original music lives" type="submit">Bandcamp</button>
       </form></th></div>
 	  
 	  <div><th><form action="https://soundcloud.com/penguinator-626121505" target="_blank">
          <button class="button button" title="Stuff I can't or haven't uploaded to Spotify or Bandcamp" type="submit">SoundCloud</button>
       </form></th></div>
-	  
-	  <div><th><form action="https://www.instagram.com/penguinatron/" target="_blank">
-         <button class="button button" title="Rarely used, not fully understood" type="submit">Instagram</button>
-      </form></th></div>
-	  
+		
 	</div>
-	
-<h2 style="background-color:tomato; margin:30px; border:5px; text-align:center; color:white;">For musical bookings, see the 'Contact Me' section below.</h2>
-	
-<h3>About Me:</h3>
-<p>I'm a 22-year-old musician and hobbyist maker of various things. Currently based in Reading, UK, working in <a href="https://www.hickies.co.uk">Hickies Music Shop</a>.</p>
-<p>There's still a lot to write up, but this website aims to collect together various projects I've done over the years, including:</p>
-<ul>
-	<li><a href="DivingBoard.html">A homemade Sysex-sending MIDI controller for my synth</a></li>
-	<li>The original score to a 5-star play</li>
-	<li>Several kazoo-only cover albums</li>
-	<li>An A*- earning EPQ</li>
-	<li>Miscellaneous coding projects</li>
-</ul>
-<p>I hope you find this stuff at least somewhat interesting, I certainly did.</p>
-
-<h3>Contact me:</h3>
-<p>If you wish to contact me, you can do so by clicking the below link. Write 'PENGUINATOR' in the subject box, or I won't see it.</p>
-<p><a href="mailto:ophagen@icloud.com">Send email</a></p>
-	
-<!--<h3 style="text-align:center;">Stuff I've done (by category)</h3>
-
-<div id="grid">
-    <a href="Music/MusicHome.html" class="img" style="background-image: url(LogoMusic.png)" title="Originals, covers, and work I've done with others"><p class="text">Music</p></a>
-	<a href="Placeholder.html" class="img" style="background-image: url(LogoProgramming.png)" title="Mostly little programmes I've written to do cool or silly things"><p class="text">Programming</p></a>
-	<a href="Placeholder.html" class="img" style="background-image: url(LogoMaking.png)" title="Miscellaneous projects of various scopes from over the years"><p class="text">Making</p></a>
- </div>
--->
- 
-<h3 style="text-align:center;">Stuff I've done<!-- (chronologically)--></h3>
-
-	<table>
-	  <tr>
-		  <th></th>
-	    <th>Date</th>
-		<th>Category</th>
-		<th>Title</th>
-	  </tr>
-	  <tr>
-		  <td><img src="Music/RPM2023/RPM2023.png" alt="Perfection Can't Be Rushed album cover" style="width:50px;height:50px;"></td>
-	    <td>2023-03-01</td>
-		<td><a href="Music/home.html">Music</a></td>
-		<td><a href="Music/RPM2023/RPM2023.html">Perfection Can't Be Rushed (but this sure can) - an EP in two weeks for the 2023 RPM challenge</a></td>
-	  </tr>
-	  <tr>
-		  <td><img src="Making/SolarTrader/SolarTrader.png" alt="Solar Trader logo" style="width:50px;height:50px;"></td>
-	    <td>2022-12-27</td>
-		<td><a href="Making/home.html">Making</a></td>
-		<td><a href="Making/SolarTrader/SolarTrader.html">Solar Trader - bootlegging a board game</a></td>
-	  </tr>
-	  <tr>
-		  <td><img src="Music/Splinters/Splinters.jpg" alt="Splinters soundtrack album art" style="width:50px;height:50px;"></td>
-	    <td>2022-08-21</td>
-		<td><a href="Music/home.html">Music</a></td>
-		<td><a href="Music/Splinters/Splinters.html">Splinters Original Score - for the Dolphin Youth Theatre Company</a></td>
-	  </tr>
-	  <tr>
-		  <td><img src="Making/wordleSolver/wordleSolver.png" alt="Wordle Solver in action" style="width:50px;height:50px;"></td>
-	    <td>2022-03-03</td>
-		<td><a href="Making/home.html">Making</a></td>
-		<td><a href="Making/wordleSolver/wordleSolver.html">Wordle Solver using basic set theory, rather than AI</a></td>
-	  </tr>
-	  <tr>
-		  <td><img src="Music/MelancholyChristmas/MelancholyChristmas.jpg" alt="Melancholy Christmas Single cover" style="width:50px;height:50px;"></td>
-	    <td>2021-12-18</td>
-		<td><a href="Music/home.html">Music</a></td>
-		<td><a href="Music/MelancholyChristmas/MelancholyChristmas.html">Melancholy Christmas - Mutual Frogs</a></td>
-	  </tr>
-	  <tr>
-		  <td><img src="Music/CommonwealthApp/CommonwealthApp.png" alt="Commonwealth App song thumbnail" style="width:50px;height:50px;"></td>
-	    <td>2021-12-10</td>
-		<td><a href="Music/home.html">Music</a></td>
-		<td><a href="Music/CommonwealthApp/CommonwealthApp.html">Commonwealth App Song</a></td>
-	  </tr>
-	  <tr>
-		  <td><img src="Music/ObscureCoversVol1/ObscureCoversVol1.png" alt="Obscure Covers (Vol. 1) EP cover" style="width:50px;height:50px;"></td>
-	    <td>2021-05-30</td>
-		<td><a href="Music/home.html">Music</a></td>
-		<td><a href="https://youtube.com/playlist?list=PL776zvniD1BhbpTCZIFJqtB4xzULHGqwq">Obscure Covers (Vol. 1)</a></td>
-	  </tr>
-	  <tr>
-		  <td><img src="Music/MorningChildhood/MorningChildhood.png" alt="Morning Childhood album cover" style="width:50px;height:50px;"></td>
-	    <td>2020-09-01</td>
-		<td><a href="Music/home.html">Music</a></td>
-		<td><a href="Music/MorningChildhood/MorningChildhood.html">Morning Childhood [Original Album]</a></td>
-	  </tr>
-	  <tr>
-		  <td><img src="Making/timelapseCam/timelapseCam.jpg" alt="timelapseCam" style="width:50px;height:50px;"></td>
-	    <td>2020-07-18</td>
-		<td><a href="Making/home.html">Making</a></td>
-		<td><a href="Making/timelapseCam/timelapseCam.html">Python Timelapse Camera</a></td>
-	  </tr>
-	  <tr>
-		  <td><img src="Music/PlasticBeach/PlasticBeach.png" alt="Plastic Beach Kazoo Edition album art" style="width:50px;height:50px;"></td>
-	    <td>2020-03-03</td>
-		<td><a href="Music/home.html">Music</a></td>
-		<td><a href="Music/PlasticBeach/PlasticBeach.html">Plastic Beach - Kazoo Edition</a></td>
-	  </tr>
-	  <tr>
-		  <td><img src="Music/FreightTrain/FreightTrain.jpg" alt="Freight Train single art" style="width:50px;height:50px;"></td>
-	    <td>2019-09-18</td>
-		<td><a href="Music/home.html">Music</a></td>
-		<td><a href="Music/FreightTrain/FreightTrain.html">Freight Train - my debut single</a></td>
-	  </tr>
-	</table>
-
-<h3>This Website:</h3>
-<p>This website has been written entirely manually as an exercise in learning HTML and CSS. It's obviously pretty basic, but at the moment seems mostly fit for purpose.
-<br><br>	
-Current planned improvements include better scaling for mobile devices and very large screens, and some sort of dark mode which auto-switches depending on the timezone from which the site is accessed.
-<br><br>
-I do not plan on switching to a website supplier/designer such as Squarespace, because apparently I'm a stubborn old fart trapped in a young man's body.</p>
-
+	  
 <hr>
-Last updated 2024-01-23
+Last updated 2024-01-29
 </body>
 </html>
 
