--- a/Making/JD-Xicontroller.html
+++ b/Making/JD-Xicontroller.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../home.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
