--- a/Music/CommonwealthApp/CommonwealthApp.html
+++ b/Music/CommonwealthApp/CommonwealthApp.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../../home.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
@@ -112,7 +112,7 @@ I may have to pinch some of these chords for a 'serious' song at some point. The
 <p style="text-align:center;">The video's available on YouTube, and the song can be downloaded from Bandcamp.</p>
 
 <hr>
-Last updated 2023-01-06
+Last updated 2024-01-29
 </body>
 </html>
 
