--- a/Music/MorningChildhood/MorningChildhood.html
+++ b/Music/MorningChildhood/MorningChildhood.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../../home.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
@@ -100,7 +100,7 @@ Mine, on the other hand, is like Bambi's first shaky steps; the songs haven't ha
 
 
 <hr>
-Last updated 2023-01-06
+Last updated 2024-01-29
 </body>
 </html>
 
