--- a/Music/Splinters/Splinters.html
+++ b/Music/Splinters/Splinters.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<h1 style="text-align:center;"><a href="../../index.html">Oliver Hagen</a></h1>
+	<h1 style="text-align:center;"><a href="../../home.html">Oliver Hagen</a></h1>
 	
 	
 	<div class="flex-container">
@@ -81,7 +81,7 @@ Your browser does not support the audio element.
 
 
 <hr>
-Last updated 2023-09-12
+Last updated 2024-01-29
 </body>
 </html>
 
