Added DivingBoard Software 0.2.2
as a download from the relevant page.

--- a/DivingBoard.html
+++ b/DivingBoard.html
@@ -12,7 +12,7 @@
 	<base target="_parent">
 	
 	<p><a href="home.html">My main page</a></p>
-	<p><mark>The code for this project will be available shortly- I need to scrape it all together properly first.</mark></p>
+	<p><mark>The code for this project is available at the bottom of the page.</mark></p>
 	
 	<h1 style="text-align:center;">DivingBoard</h1>
 
@@ -65,7 +65,7 @@ It does sound a bit like I've glossed over some stuff there, but the instruction
 <p>I've used a Raspberry Pi 3B+ as the brain of this project because it's what I have on hand. I've tried the whole setup out with a Pi Zero subbed in, and while it works, the latency is obvious. A Pi Zero 2 would probably do the job decently. </p>
 
 <h3>How to make one:</h3>
-<p>Watch this space.</p>
+<p>Software's available below- a construction guide will be available here later.</p>
 
 <h3>Goals:</h3>
 <p>
@@ -77,6 +77,9 @@ It does sound a bit like I've glossed over some stuff there, but the instruction
 		<li>Re-write the software without the utterly cursed implementation.</li><br>
 	</ul>
 </p>
+
+<h3>Where to find</h3>
+<p>For now, the latest version of the DivingBoard software can be downloaded <a href="DivingBoard/DivingBoard v0.2.2.zip" download>here</a>. I will try and put stuff on GitHub at some point, when I can find time to re-learn how GitHub works.</p>
 
 <hr>
 <h3>Footnotes</h3>
