Added video link to DivingBoard page

--- a/DivingBoard.html
+++ b/DivingBoard.html
@@ -35,7 +35,7 @@
 </p>
 
 <h3>Demonstration:</h3>
-<p>Watch this space for a neat video later.</p>
+<div><iframe width="560" height="315" src="https://www.youtube.com/embed/TDUP9Bj4wVw?si=6LJDgh5H91Puhh49" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 
 <h3>How to use:</h3>
 <p>The DivingBoard sorts different synth parameters into a three-layer-deep folder system. That sounds kind of complex and hard to navigate, but it's actually pretty straightforward:</p>
@@ -56,7 +56,7 @@
 		<li>Upon being returned to the Main Menu, relaunch the DivingBoard software.</li><br>
 		<li>Done!</li><br>
 	</ul>
-It does sound a bit like I've glossed over some stuff there, but the instructions are genuinely straightforward to follow. I'll post a video of this process here too.</p>
+It does sound a bit like I've glossed over some stuff there, but the instructions are genuinely straightforward to follow. See the video above- skip to section 'Parameter Learning Demo'</p>
 <h3>How it works:</h3>
 <p><small><i>This is a summary- I will describe how stuff works in more detail in a <a id="howItWorks" href="DivingBoard/howItWorks.html">separate linked page</a>.</i></small></p>
 <p>The way MIDI messages are 'learnt' by the DivingBoard is essentially a simple replay attack. My synth has an option to send all parameter alterations out as MIDI messages (either CC or Sysex, depending on the parameter). The DivingBoard can listen to these messages through a full sweep of some parameter's range, and then replay the relevant ones back to the synth when we edit the learnt parameter from the DivingBoard.</p>
@@ -89,7 +89,7 @@ It does sound a bit like I've glossed over some stuff there, but the instruction
    2. UX needs some minor improvements (mostly idiot-proofing (not a dig at users; <i>I'm</i> the idiot)), a planned software editor for making more detailed configurations is planned but not written, and the device is occasionally a bit erratic; freezing or failing to boot properly are both rare but recurring problems.<a href="#footnote-2-ref">&#8617;</a> 
 </p>
 <hr>
-Last updated 2024-01-29
+Last updated 2024-02-09
 </body>
 </html>
 
