--- a/Making/home.html
+++ b/Making/home.html
@@ -45,13 +45,14 @@
 <br>
 
 <div id="grid">
+	<a href="DivingBoard/DivingBoard.html" class="img" style="background-image: url(DivingBoard/DivingBoard.png)" title="Solar Trader - bootlegging an out-of-print board game from the '90s"></a>
 	<a href="SolarTrader/SolarTrader.html" class="img" style="background-image: url(SolarTrader/SolarTrader.png)" title="Solar Trader - bootlegging an out-of-print board game from the '90s"></a>
 	<a href="wordleSolver/wordleSolver.html" class="img" style="background-image: url(wordleSolver/wordleSolver.png)" title="Wordle Solver - not a clever one, but it *does* work"></a>
 	<a href="timelapseCam/timelapseCam.html" class="img" style="background-image: url(timelapseCam/timelapseCam.jpg)" title="Timelapse Cam - using Python and a webcam to take timelapses wherever I can take a Raspberry Pi"></a>
  </div>
 
 <hr>
-Last updated 2024-01-29
+Last updated 2024-03-31
 </body>
 </html>
 
