--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="style.css">
 	<base target="_parent">
 	
-	<p><a href="DivingBoard.html">DivingBoard</a></p>
+	<p><a href="Making/DivingBoard/DivingBoard.html">DivingBoard</a></p>
 	
 	<h1 style="text-align:center;"><a href="index.html">Oliver Hagen</a></h1>
 	
