Uniform-ised DivingBoard web buttons

--- a/Making/DivingBoard/DivingBoard.html
+++ b/Making/DivingBoard/DivingBoard.html
@@ -12,7 +12,35 @@
 	<link rel="stylesheet" href="../../style.css">
 	<base target="_parent">
 	
-	<p><a href="../../home.html">My main page</a></p>
+	<h1 style="text-align:center;"><a href="../../home.html">Oliver Hagen</a></h1>
+	
+	
+	<div class="flex-container">
+		
+	  <div><th><form action="https://www.youtube.com/channel/UC4pNafJO-zhEpPD0xOjAy7Q?view_as=subscriber" target="_blank">
+         <button class="button button" title="I'm mainly here" type="submit">YouTube</button>
+      </form></th></div>
+	  
+	  <div><th><form action="https://open.spotify.com/artist/0pYNutl7B6F2DJKTtC8yZp?si=2_71L9SHQJK19K_KOOicYA" target="_blank">
+         <button class="button button" title="Where my original music lives" type="submit">Spotify</button>
+      </form></th></div>
+	  
+	  <div><th><form action="https://oliverhagen.bandcamp.com/releases;" target="_blank">
+         <button class="button button" title="Where my original music lives" type="submit">Bandcamp</button>
+      </form></th></div>
+	  
+	  <div><th><form action="https://soundcloud.com/penguinator-626121505" target="_blank">
+         <button class="button button" title="Stuff I can't or haven't uploaded to Spotify or Bandcamp" type="submit">SoundCloud</button>
+      </form></th></div>
+	  
+	  <div><th><form action="https://www.instagram.com/penguinatron/" target="_blank">
+         <button class="button button" title="Rarely used, not fully understood" type="submit">Instagram</button>
+      </form></th></div>
+	  
+	</div>
+	
+	<h2 style="text-align:center;"><a href="../home.html">Making</a></h2>
+	
 	<p><mark>The code for this project is available near the bottom of the page.</mark></p>
 	
 	<h1 style="text-align:center;">DivingBoard</h1>
@@ -92,7 +120,7 @@ It does sound a bit like I've glossed over some stuff there, but the instruction
    2. UX needs some minor improvements (mostly idiot-proofing (not a dig at users; <i>I'm</i> the idiot)), a planned software editor for making more detailed configurations is planned but not written, and the device is occasionally a bit erratic; freezing or failing to boot properly are both rare but recurring problems.<a href="#footnote-2-ref">&#8617;</a> 
 </p>
 <hr>
-Last updated 2024-03-22
+Last updated 2024-04-07
 </body>
 </html>
 
