--- a/home.html
+++ b/home.html
@@ -10,8 +10,6 @@
 	<link rel="stylesheet" href="style.css">
 	<base target="_parent">
 	
-	<p><a href="Making/DivingBoard/DivingBoard.html">DivingBoard</a></p>
-	
 	<h1 style="text-align:center;"><a href="index.html">Oliver Hagen</a></h1>
 	
 	
@@ -74,6 +72,12 @@
 	    <th>Date</th>
 		<th>Category</th>
 		<th>Title</th>
+	  </tr>
+	  <tr>
+		  <td><img src="Making/DivingBoard/design.jpg" style="width:50px;height:50px;"></td>
+	    <td>2024-02-08</td>
+		<td><a href="Making/home.html">Making</a></td>
+		<td><a href="Making/DivingBoard/DivingBoard.html">DivingBoard - A relatively cheap and easy-to-configure Sysex-capable MIDI controller, built to combat menu-diving</a></td>
 	  </tr>
 	  <tr>
 		  <td><img src="Music/RPM2023/RPM2023.png" alt="Perfection Can't Be Rushed album cover" style="width:50px;height:50px;"></td>
@@ -151,7 +155,7 @@ Current planned improvements include better scaling for mobile devices and very 
 I do not plan on switching to a website supplier/designer such as Squarespace, because apparently I'm a stubborn old fart trapped in a young man's body.</p>
 
 <hr>
-Last updated 2024-01-23
+Last updated 2024-05-07
 </body>
 </html>
 
